hphp/hack/test/typecheck/first_class_polymorphism/polymorphic_lambda_syntax_with_use_bad.php
<?hh
<<file: __EnableUnstableFeatures('polymorphic_lambda')>>

function thisParseErrorIsFun(int $y): void {
  $_ = function<T>(T $x): (T,int) use($y) ==> { return tuple($x, $y);};
}
